NPC in player view detection
Created a method that checks whether the NPC is visible on screen, if it is it returns true and calls that specified NPC's interact method which displays a message on the screen.